--- a/css/style.css
+++ b/css/style.css
@@ -2,3 +2,15 @@ body {
   margin: 0;
   padding: 0;
 }
+
+  canvas {
+    display: block;
+    margin: 0;
+    padding: 0;
+    page-break-after: always;
+  }
+
+  @page{
+    size: letter; /*A4;*/
+    margin: 0;
+  }
