--- a/css/style.css
+++ b/css/style.css
@@ -1,16 +1,81 @@
-body {
+html, body {
   margin: 0;
   padding: 0;
 }
 
-  canvas {
-    display: block;
-    margin: 0;
-    padding: 0;
-    page-break-after: always;
-  }
+/* canvas {
+  display: block;
+  margin: 0;
+  padding: 0;
+  page-break-after: always;
+} */
 
-  @page{
-    size: letter; /*A4;*/
-    margin: 0;
-  }
+.page {
+  /* display: block; */
+  width: 8.5in;
+  height: 10.5in;
+  margin: 0;
+  padding: 0;
+  page-break-after: always;
+  /* border: 2px solid black; */
+  /* overflow: hidden; */
+}
+
+.form {
+  margin: 1em;
+  font-family: sans-serif;
+  font-size: 12px;
+  border: 1px solid black;
+}
+
+#tasks {
+  padding: 0;
+  margin: 0;
+  display: grid;
+  grid-template-columns: 50% 50%;
+}
+
+.column {
+  padding: 0;
+  margin: 0;
+  /* border-bottom: 1px solid black; */
+  /* border-right: 1px solid black; */
+}
+
+.task {
+  padding: 1em;
+  /* border-top: 1px solid black; */
+  /* border-left: 1px solid black; */
+}
+
+.checkboxes {
+  white-space: normal;
+}
+
+.checkbox {
+  white-space: nowrap;
+}
+
+.highlight {
+  text-decoration: underline;
+}
+
+.numbers-table {
+  display: grid;
+  grid-template-columns: auto 3em;
+}
+
+.numbers-entry {
+  border: 2px solid black;
+}
+
+.stamp-area {
+  width: 100%;
+  height: 5em;
+  border: 2px solid black;
+}
+
+@page{
+  size: letter;
+  margin: 0;
+}
