--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,12 @@
+:root {
+  --default-border: 1px solid black;
+  --default-padding: 0.5em;
+}
+
 html, body {
   margin: 0;
   padding: 0;
-  font-size: 14px;
+  font-size: 12px;
   font-family: Helvetica, sans-serif;
 }
 
@@ -16,16 +21,16 @@ html, body {
 
 .form {
   margin: 1em;
-  border-right: 1px solid black;
-  border-bottom: 1px solid black;
+  border-right: var(--default-border);
+  border-bottom: var(--default-border);
 }
 
-.header {
+.title {
   font-weight: bold;
   font-size: 1.5em;
-  padding: 1em;
-  border-top: 1px solid black;
-  border-left: 1px solid black;
+  padding: var(--default-padding);
+  border-top: var(--default-border);
+  border-left: var(--default-border);
 }
 
 #tasks {
@@ -42,9 +47,9 @@ html, body {
 }
 
 .task {
-  padding: 1em;
-  border-top: 1px solid black;
-  border-left: 1px solid black;
+  padding: var(--default-padding);
+  border-top: var(--default-border);
+  border-left: var(--default-border);
 }
 
 .section-heading {
@@ -66,13 +71,13 @@ html, body {
 
 .table {
   display: grid;
-  border-bottom: 1px solid black;
-  border-right: 1px solid black;
+  border-bottom: var(--default-border);
+  border-right: var(--default-border);
 }
 
 .table-entry {
-  border-top: 1px solid black;
-  border-left: 1px solid black;
+  border-top: var(--default-border);
+  border-left: var(--default-border);
   padding: 0.25em;
 }
 
@@ -88,6 +93,10 @@ html, body {
   width: 100%;
   height: 5em;
   border: 2px dashed black;
+}
+
+.act {
+
 }
 
 @page{
